<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/login_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/login"
        android:fontFamily="@font/channe"
        android:textColor="@color/palette_yellow"
        android:padding="5dp"
        android:textSize="17pt"/>

    <LinearLayout
        android:id="@+id/enter_member_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/white_stroke_square_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enter_member_data_txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_member_data"
            android:textColor="@color/palette_gray"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textSize="7pt"
            android:gravity="center"/>

        <EditText
            android:id="@+id/enter_username_edit_txt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/palette_white"
            android:hint="@string/member_username"
            android:textColorHint="@color/palette_gray"
            android:padding="13dp"
            android:layout_margin="7dp"
            android:maxLines="1"
            android:textSize="7pt"
            android:backgroundTint="@color/palette_white"
            android:gravity="start"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/enter_password_edit_txt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/member_password"
            android:textColorHint="@color/palette_gray"
            android:textColor="@color/palette_white"
            android:padding="13dp"
            android:maxLines="1"
            android:layout_margin="7dp"
            android:backgroundTint="@color/palette_white"
            android:textSize="7pt"
            android:gravity="start"
            android:layout_gravity="center_horizontal"/>

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            style="@style/Widget.AppCompat.ProgressBar"
            android:indeterminateDrawable="@drawable/load_progress_bar"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@drawable/yellow_square_background"
            android:textColor="@color/palette_white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/login_alert_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_admin"
            android:visibility="invisible"
            android:textColor="@color/dark_red"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="5pt"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/app_name_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/palette_gray"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginBottom="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>